frontend/src/app/pages/coin-details/coin-charts/coin-charts.component.scss
.chart-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 60%;
  position: relative;
  overflow: hidden;
}

.charts-loader {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  pointer-events: none;
  z-index: 20;
  border-radius: var(--radius-l);
  opacity: .2;
  animation: skeleton-loader .75s linear infinite alternate;

  i {
    font-size: 10rem;
  }
}

.chart-pane {
  display: flex;
  width: 100%;
  height: 100%;
}

.chart-controls-container {
  display: flex;
  width: 90%;
  padding: 1rem;
  flex-wrap: wrap;
  row-gap: 1rem;
  align-items: center;
  justify-content: space-between;

  button {
    padding: .1rem .5rem;
    border-radius: var(--radius-l);
    background-color: transparent;
    border: none;
    color: var(--text-color);
    cursor: pointer;

    &:hover {
      background-color: var(--accent2-color);
    }

    &:disabled {
      color: gray;
      pointer-events: none;
    }

    &.selected {
      pointer-events: none;
      background-color: var(--primary-color);
      color: white;
    }

    &.selected:disabled {
      background-color: var(--accent1-color);
      color: var(--text-color);
    }
  }
}

@media (max-width: 1100px) {
  .chart-container {
    height: 50vh;
  }

  .charts-loader i {
    font-size: 5rem;
  }
}

@media (max-width: 750px) {
  .chart-container {
    height: 40vh;
  }
}

